--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Drew Pomeroy
-logo: /assets/Green Simple Gradient We Are Hiring Facebook Profile Frame.png
+logo: assets/Green Simple Gradient We Are Hiring Facebook Profile Frame.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
