--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Drew Pomeroy
 logo: docs/assets/headshot_circle.png
-#description: text below image
+description: Data Analyst | Sports Science 
 #show_downloads: true
 theme: jekyll-theme-minimal
